--- a/lesson-4/style.css
+++ b/lesson-4/style.css
@@ -1,3 +1,57 @@
+
+@import url('https://fonts.googleapis.com/css?family=Unica+One');
+@import url('https://fonts.googleapis.com/css?family=Ranga');
+
 body {
-    background-color: #000;
+    font-family: 'Unica One', cursive;
+}
+
+h1,
+h2 {
+    width: 100%;
+    text-align: center;
+}
+
+h1 {
+    margin-top: 3em;
+    color: #3366cc;
+    font-size: 4em;
+}
+
+h2 {
+    font-family: 'Ranga', cursive;
+    font-size: 2.5em;
+    color: #595959;
+}
+
+.form-container {
+    display: block;
+    width: 45%;
+    margin: auto;
+}
+
+form {
+    margin: auto;
+}
+
+label {
+    font-size: 1.5em;
+    color: #595959;
+}
+
+input[type="text"],
+textarea {
+    width: 300px;
+    margin-bottom: 3em;
+}
+
+input[type="submit"] {
+    width: 300px;
+    display: block;
+    text-align: center;
+}
+
+input[type="submit"]:hover {
+    color: white;
+    background-color: #001a4d;
 }
